--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     </head>
-    <body>
-        <div id='root'></div>
+    <body style="height: 100vh">
+        <div id='root' style="height: 100%; display: flex"></div>
         <script src="../build/index.js"></script><!-- import 'index.js' -->
     </body>
 </html>
